tests/rep-poly/RepPolyTupleSection.stderr
RepPolyTupleSection.hs:11:7: error: [GHC-55287]
    • The second component of the unboxed tuple section
      does not have a fixed runtime representation.
      Its type is:
        t0 :: TYPE cx0
      When unifying:
        • t0 -> (# Int#, t0 #)
        • a -> (# Int#, a #)
      Cannot unify ‘r’ with the type variable ‘cx0’
      because the former is not a concrete ‘RuntimeRep’.
    • In the expression: (# 3#, #)
      In an equation for ‘foo’: foo = (# 3#, #)

